@@ -1,5 +1,10 @@
 2008-12-05  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
+	* vc-clearcase.el (vc-clearcase-state-heuristic): fetch the
+	clearcase comment and activity here instead of
+	`vc-cleacase-state'.  It seems `vc-cleacase-state' is never
+	called...
+
 	* ucm.el (ucm-read-activity): BUGFIX: use `cond' instead of `case'
 	(ucm-actb-checkin-command, ucm-checkin-activity ): update
 	`log-edit' call for Emacs23
